--- a/style.css
+++ b/style.css
@@ -132,8 +132,9 @@ span{
 
 .icons{
   width: 100%;
-  justify-content: space-around;
+  gap: 20px;
   margin: 0px 0 20px 0;
+  justify-content: center;
 }
 
 .icon{
