--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 h1{
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 p{
@@ -73,7 +73,7 @@ input,button{
 
 .input-box {
   width: 100%;
-  height: 55px;
+  height: 50px;
   position: relative;
 }
 
@@ -100,11 +100,12 @@ input:focus{
 .sign-btn{
   gap: 10px;
   width: 100%;
+  margin-top: 10px;
 }
 
 .sign-btn button{
   width: 50%;
-  padding: 13px 0;
+  padding: 11px 0;
   font-size: 16px;
   background: var(--primary-color);
   color: #fff;
