--- a/style.css
+++ b/style.css
@@ -159,3 +159,51 @@ span{
 .icon:hover > i{
   color: #fff;
 }
+
+#loader-container{
+  width: 100%;
+  height: 100vh;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+  transition: opacity .75s,visibility .75s;
+}
+
+#loader-container.toggle-loader{
+  opacity: 0;
+  visibility: hidden;
+}
+
+iframe{
+  display: none;
+}
+
+.text p{
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.loader{
+  width: 50px;
+  height: 50px;
+  border: 7px solid #ddd;
+  border-top: 7px solid var(--primary-color);
+  border-radius: 50%;
+  animation: loader 0.9s linear infinite;
+}
+
+@keyframes loader{
+  0%{
+    transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
