--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ input,button{
   margin-bottom: 20px;
   color: var(--primary-color);
   position: relative;
+  width: 100%;
+  text-align: center;
 }
 
 #form h1::after{
@@ -67,7 +69,7 @@ input,button{
   border-radius: 5px;
   background: var(--primary-color);
   bottom: -15px;
-  left: 0;
+  left: 34%;
   transform: translateX(90%)
 }
 
